--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -1,24 +1,24 @@
 @import "tailwindcss";
 
-/* Color Palette */
-:root {
-  --soft-gray: #F5F5F5;
-  --charcoal-gray: #333333;
-  --dark-gray: #4A4A4A;
-  --light-gold: #f4cf65;
-  --darkgold: #b16e13;
-}
-
-/* Global Styles */
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-h1, h2, h3 {
-  font-family: 'Merriweather', serif;
+h1, h2, h3, h4 {
+  font-family: 'Bebas Neue', sans-serif;
 }
 
 a { text-decoration: none; }
+
+.glass-bg-color {
+  backdrop-filter: blur(5px);
+  background-color: rgba(98, 101, 103, 0.7);
+}
+
+.glass-bg-color2 {
+  backdrop-filter: blur(20px);
+  background-color: rgba(98, 101, 103, 0.9);
+}
